<resources>
    <string name="app_name">sids_checklist</string>
    <string name="Sleep_Location">The safest place for an infant to sleep is in a separate crib in the same room as the parents.
    This is the case for parents who do not smoke, should the parents smoke the infant should be moved into a separate smoke free room to avoid any second hand inhalation.</string>
    <string name="Sleep_Location2">Co-sleeping (Sleeping in the same bed as your infant)  is not recommended as a safe sleep practice, it increases the opportunity for something to interfere with the baby’s ability to breathe such as pillows, blankets or even a part of the parents body during the night.</string>
    <string name="Sleep_Location3">The temperature of the room in which the baby is sleeping should be comfortable enough so only 1 layer of clothing on the infant is required, this will help prevent the infant from overheating. No additional layers should be added to the baby and nothing should be covering the infant\'s head while sleeping.</string>
    <string name="Sleep_Area">To create a safe sleeping area for your infant there are a few key things that you need to examine, some of these items will only need to be checked on time and others will need to be monitored each time your baby takes a nap.</string>
    <string name="Sleep_Area2">Ensure that the baby will be sleeping on a firm surface, this can be checked when you purchase a mattress for the crib. There should be no gaps between the mattress and the side of the crib, make sure you purchase a mattress that fits snuggly into the selected crib. You will need to check the crib for any objects and remove them, this includes blankets, bumper pads, stuffed animals. The baby should not have any objects in the crib with them.</string>
    <string name="Sleep_Area3">Co-Sleeping is not recommended as a safe sleep practice however if it is required there are some practices that can be put in place to make it safer for the infant. Be sure to clear the infants sleeping area of pillows and blankets and create a barrier between where the parent is sleeping and where the baby is sleeping.</string>
    <string name="Sleep_Area4">The recommended sleeping position for a healthy baby is the supine position (on their back). This should be implemented whenever the infant is put down for a nap or for the night. Any other sleeping positions can impact the breathing of the baby and should be avoided.</string>
    <string name="Sleep_General"> Breastfeeding can help develop the breathing and swallowing regulation of your infant and is encouraged to help reduce the risk of SIDs. Breastfeeding in bed or in a position where you are likely to fall asleep can be dangerous and should be avoided. If you are breastfeeding in bed, clear the area of bedding and pillows to reduce any safety risks should you fall asleep while feeding your baby. </string>
    <string name="Sleep_General2" > Discuss with your doctor and become familiar with your baby’s normal breathing patterns and colouration. This can help you identify if anything changes from your baby’s normal breathing or colouration and can help alert you to anything concerning. </string>
</resources>