<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/InfoLocationBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableLeft="@drawable/baseline_arrow_back_24"
        android:text="Back"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/InfoLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="Sleep Location"
        android:layout_below="@id/InfoLocationBack"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/LocationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/InfoLocationTitle"
        android:text="@string/Sleep_Location"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_half_standard"/>
    <TextView
        android:id="@+id/LocationInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LocationInfo"
        android:text="@string/Sleep_Location2"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_half_standard"/>
    <TextView
        android:id="@+id/LocationInfo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LocationInfo2"
        android:text="@string/Sleep_Location3"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"/>





</RelativeLayout>