<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/InfoAreaBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableLeft="@drawable/baseline_arrow_back_24"
        android:text="Back"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/InfoAreaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="Sleep Area and Position"
        android:layout_below="@id/InfoAreaBack"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/AreaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/InfoAreaTitle"
        android:text="@string/Sleep_Area"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_half_standard"/>

    <TextView
        android:id="@+id/Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AreaInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_half_standard"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Set-Up Procedure"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/AreaInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Subtitle1"
        android:text="@string/Sleep_Area2"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_half_standard"/>
    <TextView
        android:id="@+id/Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AreaInfo2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_half_standard"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Co-Sleeping"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/AreaInfo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Subtitle2"
        android:text="@string/Sleep_Area3"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_half_standard"/>
    <TextView
        android:id="@+id/Subtitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AreaInfo3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_half_standard"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Position"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/AreaInfo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Subtitle3"
        android:text="@string/Sleep_Area4"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_half_standard"/>
    <TextView
        android:id="@+id/Subtitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AreaInfo4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_half_standard"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Example Crib Set-Up"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Subtitle4"
        app:srcCompat="@drawable/crib_set_up" />
    <TextView
        android:id="@+id/imageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:text="Safe Sleep Environments by safetosleep.nichd.nih.gov"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/Subtitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_half_standard"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Instructional Video"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/webViewArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Subtitle5"/>


</RelativeLayout>
</ScrollView>